--- a/index.html
+++ b/index.html
@@ -1,7 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <title>BLCK</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="w3css.css">
+	<link rel="stylesheet" href="styles.css">
+ </head>
+ 
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<div class="gradientlayer"></div>
+<div class="blayer"></div>
+<div class="w3-content w3-center">
+<img src="resources/blcktext.svg" class="topimg">
+
+	<a href="#">
+	<div class="w3-container projects">
+		<img src="resources/placeholder.svg" class="projectthumb">
+		<p>Placeholder: to be released</p>
+	</div>
+	</a>
+	
+	<a href="#">
+	<div class="w3-container projects">
+		<img src="resources/placeholder.svg" class="projectthumb">
+		<p>Placeholder: to be released</p>
+	</div>
+	</a>
+	
+	<a href="blck-announcements.html">
+	<div class="w3-container announcements">
+		<p class="w3-center">ANNOUNCEMENTS</p>
+		<div class="antext">
+		<p class="antitle">It all starts here.</p>
+		<p class="andate w3-right">19.1. 2023</p>
+		<p class="antext">A few days in making, my site is finally there. I will maintain "BLCK" as intrinsically...</p>
+		</div>
+	</div>
+	</a>
+	
+	<div class="w3-container about">
+		<p class="w3-center">ABOUT</p>
+		<p>Hi I'm BLCK</p> <img src="resources/blcklogo.svg" class="aboutpic">
+		<p>This is a place binding together all that I do.</p>
+	</div>
+</div>
+
 </body>
 </html>
