--- a/index.html
+++ b/index.html
@@ -9,22 +9,59 @@
  </head>
  
 <body>
-<div class="gradientlayer"></div>
+  
+<div class="mobilecont w3-center w3-hide-medium w3-hide-large w3-animate-opacity">
+  <div class="mobilecont-content">
+    <img class="mobilecont-image" src="resources/blcktext.svg">
+  </div>
+</div>
+
+<script>
+  window.addEventListener("scroll", function() {
+    var header = document.querySelector(".mobilecont");
+    var headerContent = document.querySelector(".mobilecont-content");
+    var headerImage = document.querySelector(".mobilecont-image");
+    var topImage = document.querySelector(".topimg");
+    var scrollPosition = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop || 0;
+
+    if (window.innerWidth >= 768) {
+      var opacityValue = Math.max(0, 1 - scrollPosition / 200);
+      topImage.style.opacity = opacityValue;
+      headerImage.style.opacity = 1;
+    }
+	else {
+      var scaleValue = Math.max(0.8, 1 - scrollPosition * 0);
+      var heightValue = Math.max(60, 200 - scrollPosition * 0.8);
+      headerImage.style.transform = "scale(" + scaleValue + ")";
+      headerContent.style.height = heightValue + "px";
+      topImage.style.opacity = 1;
+    }
+    if (scrollPosition > 20) {
+      header.classList.add("sticky");
+    }
+	else {
+      header.classList.remove("sticky");
+    }
+  });
+</script>
+
 <div class="blayer"></div>
 <div class="w3-content w3-center">
-<img src="resources/blcktext.svg" class="topimg">
+<a href="#projects">
+<img src="resources/blcktext.svg" class="topimg w3-animate-opacity w3-hide-small">
+</a>
 
-	<a href="#">
-	<div class="w3-container projects">
-		<img src="resources/placeholder.svg" class="projectthumb">
-		<p>Placeholder: to be released</p>
+	<a href="mrt.html">
+	<div id="projects" class="w3-container projects">
+		<img src="resources/MRTlogo.svg" class="projectthumb">
+		<p><span class="projects-title">MusicReleaseTracker</span><br>Don't miss any new song, no accounts needed.</p>
 	</div>
 	</a>
 	
 	<a href="#">
 	<div class="w3-container projects">
 		<img src="resources/placeholder.svg" class="projectthumb">
-		<p>Placeholder: to be released</p>
+		<p><span class="projects-title">Placeholder</span><br>to be released</p>
 	</div>
 	</a>
 	
@@ -32,9 +69,9 @@
 	<div class="w3-container announcements">
 		<p class="w3-center">ANNOUNCEMENTS</p>
 		<div class="antext">
-		<p class="antitle">It all starts here.</p>
-		<p class="andate w3-right">19.1. 2023</p>
-		<p class="antext">A few days in making, my site is finally there. I will maintain "BLCK" as intrinsically...</p>
+		<p class="antitle">MRT release</p>
+		<p class="andate w3-right">12.6. 2023</p>
+		<p class="antext">I'm thrilled to announce the MRT. Keeping up with new music while refusing to be at the mercy of the evermore...</p>
 		</div>
 	</div>
 	</a>
@@ -42,7 +79,7 @@
 	<div class="w3-container about">
 		<p class="w3-center">ABOUT</p>
 		<p>Hi I'm BLCK</p> <img src="resources/blcklogo.svg" class="aboutpic">
-		<p>This is a place binding together all that I do.</p>
+		<p>This is a place showcasing my creative work.</p>
 	</div>
 </div>
 
