--- a/mrt.html
+++ b/mrt.html
@@ -18,8 +18,8 @@
 <div class="w3-content w3-center">
 	<img src="resources/MRTlogo.svg" class="pageimg w3-container">
 	<p class="pagetitle">MusicReleaseTracker</p>
-	<div class="w3-container pagetext">
-	<p>MusicReleaseTracker is an open-source tool that helps you stay up-to-date on new releases from your favourite artists. Do the initial setup and then just click to get the latest information. <br>With MRT, there's no need for streaming service accounts or relying on machine learning recommendation. MRT's purpose is to save you time and sanity.
+	<div class="w3-container">
+	<p class="antext">MusicReleaseTracker is an open-source tool that helps you stay up-to-date on new releases from your favourite artists. Do the initial setup and then just click to get the latest information. With MRT, there's no need for streaming service accounts or relying on machine learning recommendation. MRT's purpose is to save you time and sanity.
 	<br><br>Combination of multiple sources ensures reliable information and independency on any one. Available for windows and linux.</p>
 	</div>
 	<a href="https://github.com/BLCK-B/MusicReleaseTracker">
@@ -28,6 +28,7 @@
 		<p>Download and more info at official repository.</p>
 	</div>
 	</a>
+	<div><br></div>
 </div>
 
 </body>
