--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
 	
 	<div class="w3-container about">
 		<p class="w3-center">ABOUT</p>
-		<p>Hi I'm BLCK</p> <img src="resources/blcklogo.svg" class="aboutpic">
-		<p>This is a place showcasing my creative work.</p>
+		<p>Hi I'm BLCK<br>
+		This is a place showcasing my creative work.<br><br>
+		matrix: @blck-b:matrix.org<br>
+		email: &nbsp; blck-b@proton.me</p>
 	</div>
 </div>
 
