--- a/index.html
+++ b/index.html
@@ -6,51 +6,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="w3css.css">
 	<link rel="stylesheet" href="styles.css">
+	<script src="scripts.js" defer></script>
  </head>
  
 <body>
-  
+<!-- dynamic page height -->
+<div class="blayer"></div>
+<!-- graphic on desktop -->
 <div class="mobilecont w3-center w3-hide-medium w3-hide-large w3-animate-opacity">
   <div class="mobilecont-content">
-    <img class="mobilecont-image" src="resources/blcktext.svg">
+    <img class="mobilecont-image" src="resources/blcktext.svg" alt="BLCK graphic">
   </div>
 </div>
 
-<script>
-  window.addEventListener("scroll", function() {
-    var header = document.querySelector(".mobilecont");
-    var headerContent = document.querySelector(".mobilecont-content");
-    var headerImage = document.querySelector(".mobilecont-image");
-    var topImage = document.querySelector(".topimg");
-    var scrollPosition = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop || 0;
-
-    if (window.innerWidth >= 768) {
-      var opacityValue = Math.max(0, 1 - scrollPosition / 200);
-      topImage.style.opacity = opacityValue;
-      headerImage.style.opacity = 1;
-    }
-	else {
-      var scaleValue = Math.max(0.8, 1 - scrollPosition * 0);
-      var heightValue = Math.max(60, 200 - scrollPosition * 0.5);
-      headerImage.style.transform = "scale(" + scaleValue + ")";
-      headerContent.style.height = heightValue + "px";
-      topImage.style.opacity = 1;
-    }
-    if (scrollPosition > 0) {
-      header.classList.add("sticky");
-    }
-	else {
-      header.classList.remove("sticky");
-    }
-  });
-</script>
-
-<div class="blayer"></div>
 <div class="w3-content w3-center">
-<a href="#projects">
-<img src="resources/blcktext.svg" class="topimg w3-animate-opacity w3-hide-small">
-</a>
-
+<!-- graphic on mobile -->
+	<a href="#projects">
+	<img src="resources/blcktext.svg" class="topimg w3-animate-opacity w3-hide-small" alt="BLCK graphic">
+	</a>
+<!-- project cards -->
 	<a href="mrt.html">
 	<div id="projects" class="w3-container projects">
 		<img src="resources/MRTlogo.svg" class="projectthumb">
@@ -64,18 +38,14 @@
 		<p><span class="projects-title">Placeholder</span><br>to be released</p>
 	</div>
 	</a>
-	
-	<a href="blck-announcements.html">
+<!-- announcements card -->
+	<a href="announcements.html">
 	<div class="w3-container announcements">
 		<p class="w3-center">ANNOUNCEMENTS</p>
-		<div class="antext">
-		<p class="antitle">MRT release</p>
-		<p class="andate w3-right">12.6. 2023</p>
-		<p class="antext">I'm thrilled to announce the MRT. Keeping up with new music while refusing to be at the mercy of the evermore...</p>
-		</div>
+		<!-- last announcement inserted here by script -->
 	</div>
 	</a>
-	
+<!-- about -->
 	<div class="w3-container about">
 		<p class="w3-center">ABOUT</p>
 		<p>Hi I'm BLCK<br>
