--- a/announcements.html
+++ b/announcements.html
@@ -19,16 +19,25 @@
 </a>
 
 <!-- announcements -->
-<p class="antitle">MRT release</p>
-<p class="andate w3-right">12.6. 2023</p>
-<p class="antext">I'm thrilled to announce the MRT. Keeping up with new music while refusing to be at the mercy of the evermore encompassing streaming services grew more difficult with the number of artists I followed. I want to listen and explore at my own pace, not be pushed ads along comercially-focused music by algorithms that I just can't get behind. Not to mention data privacy concerns.<br><br>
-MusicReleaseTracker goes link by link, artist by artist, assembling tables for each source with intentional delays to prevent excessive traffic. Then it assembles a complete overview. Sounds simple, but the logic needs be tailored specially for each source and this presented some headaches.<br><br>
-Development was a real challenge with unforeseen issues at every step. I had nearly given up several times, but here we are. Everything I did, I had to learn from scratch on my own. Well, credit goes to generative AI for some advice and pieces of difficult code. Updates should follow with mostly user-facing enhancements. MRT will be here to stay for as long as it's useful for me.<br><br>
-All in all, MRT's principles are: efficiency, reliability, saving time. Installer will be available for windows and hopefully tar for linux. I will be happy to hear about your experiences or issues that you can submit on github.</p>
+	<p class="antitle">Little update</p>
+	<p class="andate w3-right">3.9. 2023</p>
+	<div class="antext"><p>No one reads these. Anyways, asides from testing a new website function I may write up an assessment. I had more time to reflect; BLCK becomes more important to me going forward. The focus shifts (due to time and priorities) mostly to development.</p>
+	<p>MRT will see a nearly complete rewrite. Work is ongoing on the transition to a reactive UI framework, as well as restructuring and redoing the main logic with the best code practices. The function will remain the same, but MRT will become more powerful in addition to the framework allowing for more advanced QoL features.</p>
+	<p>I'm also investigating a next project I will start working on (end of year at the earliest). I want to look into MySQL, react and more spring boot. Again, what it may be depends on changing circumstances.</p>
+	</div>
 
-<p class="antitle">It all starts here.</p>
-<p class="andate w3-right">19.1. 2023</p>
-<p class="antext">A few days in making, my site is finally there. I will maintain "BLCK" as intrinsically motivated. In essence, output is unpredictable. There's several ideas so far that I want to bring alive.</p>
+	<p class="antitle">MRT release</p>
+	<p class="andate w3-right">12.6. 2023</p>
+	<div class="antext"><p>I'm thrilled to announce the MRT. Keeping up with new music while refusing to be at the mercy of the evermore encompassing streaming services grew more difficult with the number of artists I followed. I want to listen and explore at my own pace, not be pushed ads along comercially-focused music by algorithms that I just can't get behind. Not to mention data privacy concerns.</p>
+	<p>MusicReleaseTracker goes link by link, artist by artist, assembling tables for each source with intentional delays to prevent excessive traffic. Then it assembles a complete overview. Sounds simple, but the logic needs be tailored specially for each source and this presented some headaches.</p>
+	<p>Development was a real challenge with unforeseen issues at every step. I had nearly given up several times, but here we are. Everything I did, I had to learn from scratch on my own. Well, credit goes to generative AI for some advice and pieces of difficult code. Updates should follow with mostly user-facing enhancements. MRT will be here to stay for as long as it's useful for me.</p>
+	<p>All in all, MRT's principles are: efficiency, reliability, saving time. Installer will be available for windows and hopefully tar for linux. I will be happy to hear about your experiences or issues that you can submit on github.
+	</div>
+
+	<p class="antitle">It all starts here</p>
+	<p class="andate w3-right">19.1. 2023</p>
+	<div class="antext"><p>A few days in making, my site is finally there. I will maintain "BLCK" as intrinsically motivated. In essence, output is unpredictable. There's several ideas so far that I want to bring alive.</p>
+	</div>
 </div>
 
 </body>
