--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
 <body>
 <!-- dynamic page height -->
 <div class="blayer"></div>
-<!-- graphic on desktop -->
-<div class="mobilecont w3-center w3-hide-medium w3-hide-large w3-animate-opacity">
-  <div class="mobilecont-content">
-    <img class="mobilecont-image" src="resources/blcktext.svg" alt="BLCK graphic">
-  </div>
-</div>
+<!-- graphic on mobile -->
+<header class="mobilecont-outer w3-center w3-hide-medium w3-hide-large w3-animate-opacity">
+	<a href="#projects" class="mobilecont-inner">
+		 <img src="resources/blcktext.svg" alt="BLCK graphic">
+	</a>
+</header>
 
 <div class="w3-content w3-center">
-<!-- graphic on mobile -->
+<!-- graphic on desktop -->
 	<a href="#projects">
 	<img src="resources/blcktext.svg" class="topimg w3-animate-opacity w3-hide-small" alt="BLCK graphic">
 	</a>
 <!-- project cards -->
 	<a href="mrt.html">
 	<div id="projects" class="w3-container projects">
-		<img src="resources/MRTlogo.svg" class="projectthumb">
+		<img src="resources/MRTlogo.svg" class="projectthumb" alt="project image">
 		<p><span class="projects-title">MusicReleaseTracker</span><br>Don't miss any new song, no accounts needed.</p>
 	</div>
 	</a>
 	
 	<a href="#">
 	<div class="w3-container projects">
-		<img src="resources/placeholder.svg" class="projectthumb">
+		<img src="resources/placeholder.svg" class="projectthumb" alt="project image">
 		<p><span class="projects-title">Placeholder</span><br>to be released</p>
 	</div>
 	</a>
