--- a/mrt.html
+++ b/mrt.html
@@ -9,6 +9,7 @@
  </head>
  
 <body>
+<!-- mobile bar -->
 <a href="index.html" class="mobilecont w3-center w3-hide-medium w3-hide-large">
   <div class="pageback-mobile">
     <img class="mobilecont-image" src="resources/blcktext.svg">
@@ -18,9 +19,21 @@
 <div class="w3-content w3-center">
 	<img src="resources/MRTlogo.svg" class="pageimg w3-container">
 	<p class="pagetitle">MusicReleaseTracker</p>
+<!-- description -->
 	<div class="w3-container">
-	<p class="antext">MusicReleaseTracker is an open-source tool that helps you stay up-to-date on new releases from your favourite artists. Do the initial setup and then just click to get the latest information. With MRT, there's no need for streaming service accounts or relying on machine learning recommendation. MRT's purpose is to save you time and sanity.
+	<p class="antext">MusicReleaseTracker is an open-source tool that helps you stay up-to-date on new music. With&nbsp;MRT, there's no need for streaming service accounts or relying on machine learning recommendation. MRT's purpose is to save you time and sanity. Developed with the backdrop of absolute bangers and&nbsp;❤️
 	<br><br>Combination of multiple sources ensures reliable information and independency on any one. Available for windows and linux.</p>
+<!-- reception -->
+	<blockquote>
+		<p>If you’re looking for a desktop program to help keep you up to date with the latest releases from your loved artists, then MusicReleaseTracker should make for a good option to consider. Though rather simple, I found MusicReleaseTracker to be rather effective at what it does.</p>
+		<p class="reviewer">SOFTPEDIA - </p>
+		<label class="radio-label" style="color: #a45cda"/>
+		<label class="radio-label" style="color: #a45cda"/>
+		<label class="radio-label" style="color: #a45cda"/>
+		<label class="radio-label" style="color: #a45cda"/>
+		<label class="radio-label"/>
+	</blockquote>
+<!-- links -->
 	</div>
 	<a href="https://github.com/BLCK-B/MusicReleaseTracker">
 	<div class="w3-container projects">
