another attempted fix

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 
 <div class="w3-content w3-center">
 <!-- graphic on mobile -->
-<header class="mobilecont-outer w3-center w3-hide-medium w3-hide-large w3-animate-opacity">
-	<a href="#projects" class="mobilecont-inner">
-		 <img src="resources/blcktext.svg" alt="BLCK graphic">
-	</a>
-</header>
-
+	<header class="mobilecont-outer w3-hide-medium w3-hide-large w3-animate-opacity">
+		<a href="#projects" class="mobilecont-inner">
+			 <img src="resources/blcktext.svg" alt="BLCK graphic">
+		</a>
+	</header>
 <!-- graphic on desktop -->
 	<a href="#projects">
 	<img src="resources/blcktext.svg" class="topimg w3-animate-opacity w3-hide-small" alt="BLCK graphic">
