--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
  </head>
  
 <body>
-<!-- dynamic page height -->
-<div class="blayer"></div>
 
 <div class="w3-content w3-center">
 <!-- graphic on mobile -->
@@ -53,6 +51,7 @@
 		matrix: @blck-b:matrix.org<br>
 		email: &nbsp; blck-b@proton.me</p>
 	</div>
+	<div class="bottomspace" />
 </div>
 
 </body>
