--- a/mrt.html
+++ b/mrt.html
@@ -41,7 +41,7 @@
 		<p>Download and more info at official repository.</p>
 	</div>
 	</a>
-	<div><br></div>
+	<div class="bottomspace" />
 </div>
 
 </body>
