--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 		</a>
 	</header>
 <!-- graphic on desktop -->
-	<a href="#projects">
-	<img src="resources/blcktext.svg" class="topimg w3-animate-opacity w3-hide-small" alt="BLCK graphic">
-	</a>
+	<div class="graphicDesktop">
+		<a href="#projects">
+		<img src="resources/blcktext.svg" class="topimg w3-animate-opacity w3-hide-small" alt="BLCK graphic">
+		</a>
+		<div id="snippet" class="snippet w3-hide-small"></div>
+	</div>
 <!-- project cards -->
 	<a href="mrt.html">
 	<div id="projects" class="w3-container projects">
